--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nomiclabs/buidler": "^1.3.0"
   },
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.3.0"
+    "@nomiclabs/buidler": "^1.3.0",
+    "eslint": "^7.0.0"
   }
 }
