--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "buidler-spdx-license-identifier",
-  "version": "1.0.1",
-  "main": "index.js",
+  "version": "1.0.2",
+  "license": "MIT",
+  "description": "Prepend local Solidity source files with an SPDX License Identifier",
+  "keywords": [
+    "buidler",
+    "spdx-license",
+    "spdx-licenses",
+    "spdx",
+    "solidity",
+    "solc",
+    "smart-contracts",
+    "ethereum",
+    "blockchain",
+    "wow"
+  ],
   "repository": "https://github.com/ItsNickBarry/buidler-spdx-license-identifier",
   "author": "Nick Barry",
-  "license": "MIT",
-  "private": false,
+  "main": "index.js",
   "peerDependencies": {
     "@nomiclabs/buidler": "^1.3.0"
   },
