restore typescript support, set version to 2.0.1

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "repository": "https://github.com/ItsNickBarry/hardhat-spdx-license-identifier",
   "author": "Nick Barry",
   "main": "index.js",
+  "types": "index.d.ts",
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
