--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   "author": "Nick Barry",
   "main": "index.js",
   "types": "index.d.ts",
+  "scripts": {
+    "prepare": "husky",
+    "prettier": "prettier --write ."
+  },
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.5.0",
-    "hardhat": "^2.22.5"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "hardhat": "^2.22.5",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2"
   }
 }
