--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   ],
   "repository": "https://github.com/ItsNickBarry/hardhat-spdx-license-identifier",
   "author": "Nick Barry",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
+    "build": "tsc --build",
     "prepare": "husky",
     "prettier": "prettier --write ."
   },
@@ -29,9 +30,13 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.14.6",
     "hardhat": "^2.22.5",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
