--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     "prepare": "husky",
     "prettier": "prettier --write ."
   },
+  "files": [
+    "dist/src/",
+    "src/"
+  ],
   "peerDependencies": {
     "hardhat": "^2.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.14.6",
+    "chai": "^4.4.1",
     "hardhat": "^2.22.5",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
