--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
+    "prettier-plugin-solidity": "^1.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
