--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "prettier --write ."
   },
   "files": [
-    "dist/src/",
+    "dist/",
     "src/"
   ],
   "peerDependencies": {
